Closed Bug 33166 Opened 24 years ago Closed 24 years ago

Possible to press Next when the Warning dialog is open

Categories

(SeaMonkey :: Installer, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: ssu0262)

Details

If you choose to install Mozilla into an directory where mozilla is already 
installed a Warning dialog come up. When this dialog is active it's still 
possible to press Next in the original dialog, generating a lot of Warning 
dialogs.
fix is in hand.  waiting for a reviewer to help out before checking in.
Status: NEW → ASSIGNED
Target Milestone: --- → M15
fixed.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
verified with mozilla installer in 
ftp://ftp.mozilla.org/pub/mozilla/nightly/latest/2000-03-30-09
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.