fixing bug #33166 - can no longer press next in Setup Type dialog when warning dialog is shown. r=sgehani